--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-144.png" />
-  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon.png" />
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="robots" content="noarchive,noodp,noydir" />
   <meta name="referrer" content="always" />
