--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -93,7 +93,7 @@
             :data => { :confirm => "Are you sure you want to logout?" },
             :method => "post" %>
         <% else %>
-          <a href="/login">Login</a>
+          <a href="/auth/twitter">Login</a>
         <% end %>
         </span>
       </div>
