change from story to idea

--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,6 +1,6 @@
 <div class="box" id="story_box">
   <div class="legend">
-    Submit a Story
+    Submit an Idea
   </div>
 
   <div id="story_holder">
