--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
 
         <% if @user %>
           <% links.merge!({ "/threads" => "Your Threads",
-            "/stories/new" => "Submit Story" }) %>
+            "/stories/new" => "Submit Idea" }) %>
         <% end %>
 
         <% links.merge!({ "/search" => "Search" }) %>
@@ -85,9 +85,7 @@
               raw("class=\"cur_url\"") : "" %>>Messages</a>
           <% end %>
 
-          <a href="/settings" <%= @cur_url == "/settings" ?
-            raw("class=\"cur_url\"") : "" %>><%= @user.username %>
-            (<%= @user.karma %>)</a>
+          <a href="/u/<%= @user.username %>">My Profile</a>
 
           <%= link_to "Logout", { :controller => "login", :action => "logout" },
             :data => { :confirm => "Are you sure you want to logout?" },
