--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -26,20 +26,6 @@
 
 <div class="box">
   <div class="boxline">
-  <% if f.object.url_is_editable_by_user?(@user) %>
-    <%= f.label :url, "URL:", :class => "required" %>
-    <%= f.text_field :url, :autocomplete => "off" %>
-    <%= button_tag "Fetch Title", :id => "story_fetch_title",
-      :type => "button" %>
-  <% elsif !f.object.new_record? && !f.object.url.blank? %>
-    <%= f.label :url, "URL:", :class => "required" %>
-    <div class="d">
-    <a href="<%= f.object.url %>"><%= f.object.url %></a>
-    </div>
-  <% end %>
-  </div>
-
-  <div class="boxline">
     <%= f.label :title, "Title:", :class => "required" %>
     <%= f.text_field :title, :maxlength => 100, :autocomplete => "off"  %>
   </div>
@@ -66,7 +52,7 @@
   <div class="boxline">
     <%= f.label :description, "Text:", :class => "required" %>
     <%= f.text_area :description, :rows => 15,
-      :placeholder => "Optional when submitting a URL; please see guidelines",
+      :placeholder => "Description",
       :autocomplete => "off" %>
   </div>
 
@@ -76,57 +62,13 @@
     </a>
     <div id="story_guidelines" style="<%= show_guidelines?? "" :
     "display: none;" %>">
-      <div style="float: right;">
-      <a href="javascript:window.location=%22<%= Rails.application.root_url %>stories/new?url=%22+encodeURIComponent(document.location)+%22&title=%22+encodeURIComponent(document.title)"
-      style="border: 1px solid #ddd; padding: 0.5em; background-color:
-      #f8f8f8; line-height: 1.5em; margin-left: 1em;">Submit to
-      <%= Rails.application.name %></a>
-      </div>
       <ul>
-
-        <li><p>
-        To be able to easily submit a page you're viewing in your browser
-        to <%= Rails.application.name %>, drag the bookmarklet to the right
-        to your bookmark bar.  You'll be taken to this page with the viewed
-        page's URL and title.
-        </p></li>
-
-        <li><p>
-        When submitting a URL, the text field is optional and should only
-        be used when additional context or explanation of the URL is
-        needed.  Commentary or opinion should be reserved for a comment,
-        so that it can be voted on separately from the story.
-        </p></li>
-
-        <li><p>
-        Do not editorialize story titles, but when the original story's
-        title has no context or is unclear, please change it.  <strong>Please
-        remove extraneous components from titles such as the name of the
-        site or section.</strong>
-        </p></li>
-
         <li><p>
         If no tags clearly apply to the story you are submitting, chances
         are it does not belong here.  Do not overreach with tags if they
         are not the primary focus of the story.
         </p></li>
-
-        <li><p>
-        When the story being submitted is more than a year or so old,
-        please add the year the story was written to the post title in
-        parentheses.
-        </p></li>
-
       </ul>
     </div>
   </div>
 </div>
-
-<script>
-  $(document).ready(function() {
-    $("#story_fetch_title").click(function() {
-      Lobsters.fetchURLTitle($(this), $("#story_url"), $("#story_title"));
-      return false;
-    });
-  });
-</script>
